<resources>
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string name="app_name">ElRinconDelTenedor</string>
    <string name="imageuser">imagen de usuario\n</string>
    <string name="foto_usuario">Foto usuario</string>
    <string name="buscador">Barra de busqueda</string>
    <string name="imagen_del_restaurante">Imagen del restaurante</string>
    <string name="nombre_del_restaurante">nombre del restaurante</string>
    <string name="descripci_n_breve_del_restaurante">Descripcion del restaurante</string>
    <string name="mis_restaurantes_guardados">Restaurantes guardados del usuario\n</string>
    <string name="no_tienes_restaurantes_guardados">Mensaje de no tienes restaurantes guardados</string>
    <string name="mapadelmundo">Mapa del mundo\n</string>
    <string name="lista_de_restaurantes">Lista de restaurantes\n</string>
    <string name="sing_in">Iniciar sesión\n</string>
    <string name="email">email\n</string>
    <string name="example20_gmail_com">Ejemplo de email</string>
    <string name="password">Contraseña</string>
    <string name="celda_password">***********</string>
    <string name="o_inicia_sesi_n_a_trav_s_de">Inicia sesión a través de...</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="forgot_password">Olvidaste la contraseña?</string>
    <string name="singup">Crear cuenta</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="introduce_tu_correo_electronico">introduce tu correo electronico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="introduce_la_contrsenia">introduce la contrseña</string>
    <string name="inicar_sesion">Inicar Sesión</string>
    <string name="restaurante">RESTAURANTE</string>
    <string name="foto_user">foto usuario</string>
    <string name="nombre_del_restaurantee">Nombre del restaurante</string>
    <string name="guardar_en_coleccionables">Guardar en coleccionables</string>
    <string name="valorar">Valorar</string>
    <string name="colecciones">Colecciones</string>
    <string name="valoraci_n">Valoración</string>
    <string name="valoracion">Valoracion</string>
    <string name="home_01">Home_01</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="inicio">Inicio</string>
    <string name="ajustes">Ajustes</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>
    <string name="configuracion">⚙Configuración</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="ubicacion">Ubicación</string>
    <string name="idioma"> Seleccionar Idioma</string>
    <string name="el_restaurante_no_tiene_valoraciones">El restaurante no tiene valoraciones.</string>
    <string name="valorame">Valorame:</string>
    <string name="escribe_aqui_tu_valoracion">Escribe aqui tu valoración...</string>
    <string name="guardar">Guardar</string>
    <string name="correousuario_gmail_com">correousuario@gmail.com</string>
    <string name="idioma_cambiado">Idioma cambiado</string>
    <string name="collection">Colección</string>
    <string name="perfil">Perfil</string>
    <string name="home01">Mapa</string>
    <string name="usuario">Usuario</string>
    <string name="mapa">Mapa</string>
    <string name="restaurantes_por_zona">Restaurantes por zona.</string>
    <string name="perfil_de_usuario">Perfil de usuario</string>
    <string name="configuraci_n">Configuración</string>
    <string name="login">Login</string>
    <string name="valoraciones">Valoraciones</string>
    <string name="detalles_del_restaurante">Detalles del Restaurante</string>
    <string name="descripcion01">Restaurante de tapas selectas reformado frente al mar</string>
    <string name="descripcion02">Las mejores tapas y platos para veganos, ofreciendo también una carta tradicional.</string>
    <string name="descripcion03">Restaurante familiar desde 1982, con un exquisito producto gallego.</string>
    <string name="descripcion04">Restaurante de ambiente relajado con especialidades de marisco y postres cocinados con ingredientes de origen local.</string>
    <string name="descripcion05">Restaurante de categoría en la zona centro.</string>
    <string name="descripcion06">Todo tipo de comida oriental con cambios de carta constantes.</string>
    <string name="descripcion07">Restaurante familiar especializado en comida italiana.</string>
    <string name="descripcion08">Restaurante clásico especializado en comida Holandesa.</string>
    <string name="descripcion09">Pescados, mariscos y arroces en un elegante comedor acristalado y terraza en un porche con vistas al mar.</string>
    <string name="descripcion10">Tapas, fuentes de embutidos y pescado a la parrilla en un restaurante rústico encalado con una terraza arbolada.</string>
    <string name="descripcion11">Iluminación cálida y adornos hogareños antiguos en cadena de restaurantes de gastronomía tradicional italiana.</string>
    <string name="valoracion01">Excelente comida y ambiente.</string>
    <string name="valoracion02">Un lugar muy acogedor y sabroso.</string>
    <string name="valoracion03">Un sitio muy bonito y comida increíble.</string>
    <string name="valoracion04">Me encantan las tapas veganas.</string>
    <string name="valoracion05">La comida gallega es auténtica y deliciosa.</string>
    <string name="valoracion06">Una excelente opción para comida tradicional.</string>
    <string name="valoracion07">Me encanta el pescado fresco, muy bien preparado.</string>
    <string name="valoracion08">El ambiente es perfecto para un día de playa.</string>
    <string name="valoracion09">La carne a la brasa es lo mejor.</string>
    <string name="valoracion10">Un asador con muy buenos cortes de carne.</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="guia_activa">Volver a la pantalla principal</string>
    <string name="guia_activa0">Este botón te llevará a la lista de restaurantes</string>


</resources>