<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/action_collection"
        android:title="@string/collection"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_profile"
        android:title="@string/perfil"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_home01"
        android:title="@string/home01"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_setting"
        android:title="@string/ajustes"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/cerrar_sesion"
        app:showAsAction="never" />
</menu>