<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:layout_marginTop="40pt"
        android:text="@string/iniciar_sesion" />

    <TextView
        android:id="@+id/tituloMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo"
        android:layout_marginTop="30pt"
        android:textSize="20sp"
        android:layout_marginStart="20pt"
        android:text="@string/correo_electronico" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/tituloMail"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20pt"
        android:layout_marginTop="10pt"
        android:text="@string/introduce_tu_correo_electronico"/>

    <TextView
        android:id="@+id/tituloPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="20pt"
        android:textSize="20sp"
        android:layout_marginStart="20pt"
        android:text="@string/contrasenia" />

    <EditText
        android:id="@+id/psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tituloPsw"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20pt"
        android:textSize="30sp"
        android:text="@string/introduce_la_contrsenia"
        android:layout_marginTop="10pt"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/psw"
        android:layout_marginTop="30pt"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/inicar_sesion" />


</RelativeLayout>