<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/TituloCreacionCuenta"
            android:id="@+id/logo"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/TituloCreacionCuenta"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintBottom_toTopOf="@+id/EmailCreacionCuenta"
            android:text="@string/sing_in"
            android:paddingBottom="20sp"
            android:textSize="30sp"
            android:layout_marginBottom="15dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/EmailCreacionCuenta"
            app:layout_constraintTop_toBottomOf="@+id/TituloCreacionCuenta"
            app:layout_constraintBottom_toTopOf="@+id/IntroduccionEmail"
            android:text="@string/email"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/IntroduccionEmail"
            app:layout_constraintTop_toBottomOf="@+id/EmailCreacionCuenta"
            app:layout_constraintBottom_toTopOf="@+id/Password"
            android:inputType="textEmailAddress"
            android:hint="@string/example20_gmail_com"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/Password"
            app:layout_constraintTop_toBottomOf="@+id/IntroduccionEmail"
            app:layout_constraintBottom_toTopOf="@+id/IntroduccionPassword"
            android:text="@string/password"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/IntroduccionPassword"
            app:layout_constraintBottom_toTopOf="@id/botonCrearCuenta"
            app:layout_constraintTop_toBottomOf="@+id/Password"
            android:inputType="textPassword"
            android:hint="@string/celda_password"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/botonCrearCuenta"
            app:layout_constraintTop_toBottomOf="@id/IntroduccionPassword"
            app:layout_constraintBottom_toTopOf="@id/OpcionesCreacionCuenta"
            android:text="@string/sing_in"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/OpcionesCreacionCuenta"
            app:layout_constraintTop_toBottomOf="@+id/botonCrearCuenta"
            app:layout_constraintBottom_toTopOf="@id/botonCrearCuentaTwitter"
            android:text="@string/o_inicia_sesi_n_a_trav_s_de"
            android:textColor="@color/grey"
            android:textSize="11sp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/botonCrearCuentaTwitter"
            app:layout_constraintTop_toBottomOf="@id/OpcionesCreacionCuenta"
            app:layout_constraintBottom_toTopOf="@id/ForgotPassword"
            app:layout_constraintEnd_toStartOf="@+id/botonCrearCuentaGoogle"
            android:text="@string/twitter"
            android:backgroundTint="@color/bluecian"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/botonCrearCuentaGoogle"
            app:layout_constraintTop_toBottomOf="@id/OpcionesCreacionCuenta"
            app:layout_constraintBottom_toTopOf="@id/SingUp"
            app:layout_constraintStart_toEndOf="@+id/botonCrearCuentaTwitter"
            android:text="@string/google"
            android:backgroundTint="@color/red"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/ForgotPassword"
            app:layout_constraintTop_toBottomOf="@+id/botonCrearCuentaTwitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/SingUp"
            android:text="@string/forgot_password"
            android:autoLink="web"
            android:linksClickable="true"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/ForgotPassword"
            android:id="@+id/SingUp"
            app:layout_constraintTop_toBottomOf="@+id/botonCrearCuentaTwitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/singup"
            android:autoLink="web"
            android:linksClickable="true"
            android:layout_marginBottom="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>