<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/textEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/el_restaurante_no_tiene_valoraciones"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="15dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRestaurant"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valorame"
        android:textSize="30sp"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/editTextValoracion"
        android:hint="@string/escribe_aqui_tu_valoracion"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btnValorame"
        android:text="@string/valorame"/>

</LinearLayout>