
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data>
    <variable
        name="item"
        type="com.example.elrincondeltenedor.ItemData_Collection" />
</data>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageRestaurant"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            android:contentDescription="@string/imagen_del_restaurante" />

        <TextView
            android:id="@+id/nameRestaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_restaurante"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/descriptionRestaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n_breve_del_restaurante"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="4dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
</layout>