<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    tools:ignore="InvalidNavigation"
    app:startDestination="@id/home01Fragment">
    <fragment
        android:id="@+id/home01Fragment"
        android:name="com.example.elrincondeltenedor.Home01Fragment"
        android:label="@string/mapa"
        tools:layout="@layout/home_screen_01" >
        <action
            android:id="@+id/action_home01Fragment_to_home02Fragment"
            app:destination="@id/home02Fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_home01Fragment_to_profileUserFragment"
            app:destination="@id/profileUserFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_home01Fragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_home01Fragment_to_collectionFragment"
            app:destination="@id/collectionFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_home01Fragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/home02Fragment"
        android:name="com.example.elrincondeltenedor.Home02Fragment"
        android:label="@string/restaurantes_por_zona"
        tools:layout="@layout/screen_home_02" >
        <action
            android:id="@+id/action_home02Fragment_to_home01Fragment"
            app:destination="@id/home01Fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_home02Fragment_to_profileUserFragment"
            app:destination="@id/profileUserFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_home02Fragment_to_collectionFragment"
            app:destination="@id/collectionFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_home02Fragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/profileUserFragment"
        android:name="com.example.elrincondeltenedor.ProfileUserFragment"
        android:label="@string/perfil_de_usuario"
        tools:layout="@layout/screen_user_profile" >
        <action
            android:id="@+id/action_profileUserFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.elrincondeltenedor.SettingFragment"
        android:label="@string/configuraci_n"
        tools:layout="@layout/setting_screen" />

    <fragment
        android:id="@+id/loginFragment"
        android:label="@string/login"
        tools:layout="@layout/login_screen" >
        <action
            android:id="@+id/action_loginFragment_to_home01Fragment"
            app:destination="@id/home01Fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/valoracionesFragment"
        android:name="com.example.elrincondeltenedor.ValoracionesFragment"
        android:label="@string/valoraciones"
        tools:layout="@layout/valoraciones_recyclerview" >
        <action
            android:id="@+id/action_valoracionesFragment_to_home01Fragment"
            app:destination="@id/home01Fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_valoracionesFragment_to_collectionFragment"
            app:destination="@id/collectionFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_valoracionesFragment_to_profileUserFragment"
            app:destination="@id/profileUserFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.elrincondeltenedor.DetailsFragment"
        android:label="@string/detalles_del_restaurante"
        tools:layout="@layout/restaurant_detail_screen" >
        <action
            android:id="@+id/action_detailFragment_to_collectionFragment"
            app:destination="@id/collectionFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_detailFragment_to_valoracionesFragment"
            app:destination="@id/valoracionesFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/collectionFragment"
        android:name="com.example.elrincondeltenedor.CollectionFragment"
        android:label="@string/collection"
        tools:layout="@layout/collection_screen" >
        <action
            android:id="@+id/action_collectionFragment_to_profileUserFragment"
            app:destination="@id/profileUserFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_collectionFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_collectionFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
    </fragment>



</navigation>