<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/imagen_usuario"
            android:src="@drawable/logo"
            android:contentDescription="@string/foto_usuario"
            android:layout_gravity="start"
            android:padding="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"/>


    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:inputType="textShortMessage"
        android:hint="@string/buscador"
        android:textSize="16sp"
        android:background="@drawable/round_edit_text"
        android:padding="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:autofillHints="name"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView">


    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home_01"
        android:layout_gravity="center"
        android:id="@+id/boton_Home_01"
        android:layout_marginTop="25dp"/>

</LinearLayout>