<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="com.example.elrincondeltenedor.ItemData" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:id="@+id/nameRestaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_del_restaurante"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/descriptionRestaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descripci_n_breve_del_restaurante"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginTop="4dp" />

            </LinearLayout>
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/imageRestaurant"
                    android:contentDescription="@string/imagen_del_restaurante"
                    android:layout_gravity="center"
                    android:layout_marginStart="35sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>